--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,6 +39,7 @@
 @import 'blocks/latestposts';
 @import 'blocks/papertexture';
 @import 'blocks/sponsors';
+@import 'blocks/speakers';
 @import 'blocks/blog';
 
 // Utilities
