--- a/scss/blocks/_sponsors.scss
+++ b/scss/blocks/_sponsors.scss
@@ -1,47 +1,17 @@
 .wordcamp-sponsors {
-	display: block !important;
+	display: flex !important;
+	flex-wrap: wrap;
 
 	li {
 		vertical-align: top !important;
-		margin-bottom: calc-rem( config( spacing, base ) );
+		margin-bottom: calc-rem( config( spacing, base ) * 1.5 ) !important;
+		width: 100%;
 	}
 
 	li .wordcamp-sponsor {
 		padding: calc-rem( config( spacing, base ) );
-	}
-
-	.more-link {
-		display: block;
-		font-weight: config( typography, primary, weights, bold );
-		margin-top: calc-rem( config( spacing, base ) );
+		height: 100%;
 		position: relative;
-		padding-right: calc-rem( config( spacing, base ) * 2 );
-		text-decoration: none;
-
-		&:before,
-		&:after {
-			display: inline-block;
-			content: "";
-			position: absolute;
-			right: 0;
-			top: 50%;
-		}
-
-		&:before {
-			width: calc-rem( config( spacing, base ) );
-			height: 2px;
-			background-color: currentColor;
-			margin-top: -1px;
-		}
-
-		&:after {
-			width: calc-rem( config( spacing, base ) / 3 );
-			height: calc-rem( config( spacing, base ) / 3 );
-			border-right: 2px solid currentColor;
-			border-top: 2px solid currentColor;
-			transform: rotate( 45deg );
-			margin-top: -0.25rem;
-		}
 	}
 
 	// Icon only grid
@@ -67,11 +37,12 @@
 		li {
 			@media screen and ( min-width: #{ config( grid, breakpoints, md ) } ) {
 				width: 50%;
+				padding-right: calc-rem( config( spacing, base ) * 2 );
 			}
 		}
 
 		.wordcamp-sponsor {
-			padding: 0 calc-rem( config( spacing, base ) * 2 ) 0 0;
+			padding: 0 0 calc-rem( config( spacing, base ) * 1.5 ) 0;
 		}
 
 		.wordcamp-sponsors__featured-image {
@@ -87,6 +58,13 @@
 			transform: translate( -50%, -50% );
 			width: 100%;
 			max-width: 60%;
+		}
+
+		.more-link {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
 		}
 	}
 
@@ -153,7 +131,7 @@
 		    padding: calc-rem( config( spacing, base ) * 2 );
 		    box-shadow: 0 0.1rem 0.5rem rgba( 0, 0, 0, .1 );
 
-		    @media screen and ( min-width: #{ config( grid, breakpoints, lg ) } ) {
+		    @media screen and ( min-width: #{ config( grid, breakpoints, md ) } ) {
 		    	padding-left: 30%;
 		    }
 		}
@@ -161,7 +139,7 @@
 		.wordcamp-sponsors__featured-image {
 			margin-bottom: calc-rem( config( spacing, base ) );
 
-			@media screen and ( min-width: #{ config( grid, breakpoints, lg ) } ) {
+			@media screen and ( min-width: #{ config( grid, breakpoints, md ) } ) {
 		    	position: absolute;
 		    	top: calc-rem( config( spacing, base ) * 2 );
 		    	left: calc-rem( config( spacing, base ) * 2 );
