--- a/scss/blocks/_sponsors.scss
+++ b/scss/blocks/_sponsors.scss
@@ -128,10 +128,11 @@
 		.wordcamp-sponsor {
 			position: relative;
 		    background-color: config( colors, page, alt );
-		    padding: calc-rem( config( spacing, base ) * 2 );
+		    padding: calc-rem( config( spacing, base ) * 2 ) calc-rem( config( spacing, base ) );
 		    box-shadow: 0 0.1rem 0.5rem rgba( 0, 0, 0, .1 );
 
 		    @media screen and ( min-width: #{ config( grid, breakpoints, md ) } ) {
+			    padding: calc-rem( config( spacing, base ) * 2 );
 		    	padding-left: 30%;
 		    }
 		}
