--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,6 +40,7 @@
 @import 'blocks/papertexture';
 @import 'blocks/sponsors';
 @import 'blocks/speakers';
+@import 'blocks/organizers';
 @import 'blocks/blog';
 @import 'blocks/more-link';
 
